# tinylisp-rs

./: .gdb_history  Cargo.toml  README.md  new.lisp  prelude.lisp
.cargo/: config.toml
src/: data.rs  env.rs  main.rs  parser.rs  peri.rs  ports.rs  prims.rs  tokenizer.rs  types.rs
